<resources>
    <string name="app_name">Project555</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dofamin Daretenович</string>
    <string name="nav_header_subtitle">DoDaGames@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки аккаунта</string>

    <string name="menu_home">Главная</string>
    <string name="menu_university">Университеты</string>
    <string name="menu_calendar">Календарь событий</string>
    <string name="menu_account">Аккаунт</string>
    <string name="menu_notifications">Уведомления</string>
    <string name="menu_update">Обновить списки</string>
    <string name="menu_pay">Поддержать проект</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_calc">Калькулятор</string>

    <string name="calc_text1">Выберите предметы из списка</string>
    <string name="calc_text2">Введите свои баллы</string>

    <string name="ad_banner_main">ca-app-pub-6675273839004883/8319047689</string>
    <string name="ad_banner_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="Home_fragment">This is home fragment</string>
    <string name="Gallery_fragment">This is gallery fragment</string>
    <string name="Send_fragment">This is send fragment</string>
    <string name="Share_fragment">This is share fragment</string>
    <string name="Tools_fragment">This is tools fragment</string>
    <string name="DoDa">Dareten and Dofamin</string>
    <string name="disclaimer">Данное приложение является по большей мере развлекательным.
    Авторы не несут ответственность за оскорбление чувств верующих и унижение сексуальных меньшинств.</string>

    <string name="gallery">This is gallery fragment</string>
    <string name="home">This is home fragment</string>
    <string name="slideshow">This is slideshow fragment</string>

    <string name="russian">Русский язык</string>
    <string name="math_base">Математика (база)</string>
    <string name="math_pro">Математика (профиль)</string>
    <string name="physics">Физика</string>
    <string name="chemistry">Химия</string>
    <string name="computer_science">Информатика и ИКТ</string>
    <string name="biology">Биология</string>
    <string name="geography">География</string>
    <string name="history">История</string>
    <string name="social_science">Обществознание</string>
    <string name="literature">Литература</string>
    <string name="english">Английский язык</string>
    <string name="german">Немецкий язык</string>
    <string name="french">Французский язык</string>
    <string name="spanish">Испанский язык</string>
    <string name="chinese">Китайский язык</string>
    <string name="further">Далее</string>
    <string name="back">Назад</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings">Настройки</string>
</resources>
